# sgjb-telehitch-insights

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  session_name.session  telegram_data_2026_20000.csv  telegram_scraper.py
analytics/telehitch_dbt/: dbt_project.yml
analytics/telehitch_dbt/models/: gold_telehitch_requests.sql  schema.yml  silver_telehitch_requests.sql  sources.yml
dags/: telegram_scraper.py  telegram_to_databricks.py
databricks/: geocode_silver_locations.py  populate_location_overrides.py
deploy/aws-ec2/: README.md  airflow-command.sh  airflow.env.example  backup-airflow.sh  check-ssh.sh  import-channel-state.sh  install.sh  migrate-metadata-to-postgres.sh  monitor-resources.sh  recover-channel-state-from-sqlite.sh  update.sh  verify-install.sh
deploy/aws-ec2/systemd/: telehitch-airflow-backup.service  telehitch-airflow-backup.timer  (+2 more)
deploy/oracle-vm/: Dockerfile  README.md  airflow.env.example  compose.yaml
docs/: cloud-composer-setup.md  location_overrides_runbook.md
frontend/: .gitignore  README.md  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: RequestFeed.tsx  TelehitchMap.tsx
frontend/lib/: availability.ts  databricks.ts  mapNodes.tsx  types.ts
scripts/: generate_telegram_string_session.py  setup_telegram_session_macos.sh
src/telehitch_insights/: __init__.py  telegram_to_databricks.py
tests/: test_aws_ec2_deployment.py  test_databricks_geocoding_notebook.py  test_dbt_silver_model.py  test_telegram_scraper.py  test_telegram_to_databricks.py
(+3 files in other folders)
