[project]
name = "sgjb-telehitch-insights"
version = "0.1.0"
description = "Authorized Telegram group message ingestion into Databricks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "databricks-sql-connector>=3.0.0",
    "python-dotenv>=1.0.0",
    "telethon>=1.34.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[project.scripts]
telegram-to-databricks = "telehitch_insights.telegram_to_databricks:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
